Fix style for drop-off button on mobile devices
Issue: CS-391

--- a/src/resources/css/packlink-checkout.css
+++ b/src/resources/css/packlink-checkout.css
@@ -41,11 +41,9 @@
 	background-color: white;
 }
 
-.pl-wide-shipping {
-	display: block;
-	height: 1px;
-	width: 200px;
-	background-color: transparent;
+#packlink-drop-off-picker {
+	margin-left: 1em;
+	line-height: inherit;
 }
 
 @media screen and (max-width: 800px) {
